--- a/probHub-RUST-backend/Cargo.toml
+++ b/probHub-RUST-backend/Cargo.toml
@@ -16,3 +16,5 @@ rand_core = { version = "0.6", features = ["std"] }
 jsonwebtoken = "9"
 chrono = "0.4"
 futures-util = "0.3"
+lettre = { version = "0.11", features = ["smtp-transport", "builder"] }
+rand = "0.8"
