--- a/probHub-RUST-backend/Cargo.toml
+++ b/probHub-RUST-backend/Cargo.toml
@@ -18,3 +18,4 @@ chrono = "0.4"
 futures-util = "0.3"
 lettre = { version = "0.11", features = ["smtp-transport", "builder"] }
 rand = "0.8"
+actix-cors = "0.7.1"
